--- a/contracts/punkga-leveling/Cargo.toml
+++ b/contracts/punkga-leveling/Cargo.toml
@@ -40,7 +40,7 @@ optimize = """docker run --rm -v "$(pwd)":/code \
 """
 
 [dependencies]
-punkga-reward-nft = { workspace = true, features = ["library"] }
+cw2981-royalties = { workspace = true, features = ["library"] }
 cosmwasm-schema = { workpace = true }
 cosmwasm-std = { workpace = true }
 cw-storage-plus = { workpace = true }
